--- a/defense/beamerinnerthemeprestonh.sty
+++ b/defense/beamerinnerthemeprestonh.sty
@@ -1,5 +1,6 @@
 % Inner theme style file for the `prestonh' beamer theme
 % Copyright 2017 Preston Hinkle
+% Modification of beamer theme by Flip Tanedo
 % This file may be distributed and/or modified
 % 	1. under the LaTeX Project Public License and/or
 % 	2. under the GNU Public License.
